<resources>
    <string name="app_name">Test1</string>
    <string name="Login">Login</string>
    <string name="music">Music</string>
    <string name="mast_assessment">ASSESSMENT</string>
    <string name="my_profile">My Profile</string>
    <string name="trivia">Trivia</string>
    <string name="sports_news">Sports News</string>
    <string name="Options">Options</string>
    <string name="statistics_and_more">Statistics and More</string>
    <string name="profile">Profile</string>
    <string name="smooth_jazz_and_more">Smooth Jazz and More</string>
    <string name="your_sports_corner">Your Sports Corner</string>
    <string name="dashboard">Dashboard</string>
    <string name="welcome_user">Welcome User</string>
    <string name="chat">Chat</string>
    <string name="Music">Navigation Drawer</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="menu" />
</resources>